# similar_images_search_engine

./: .gitignore  CMakeLists.txt  README.md  VisualDictionary.cpp  VisualDictionary.h  dictionary.xml  main.cpp
BazaDanych/: BagOfWords  CMakeCache.txt  CTestTestfile.cmake  Makefile  Test  cmake_install.cmake  database
src/: BOW.cpp  BOW.h  BasicDescriptor.hpp  ColorOrthogonalLBPDescriptor.cpp  ColorOrthogonalLBPDescriptor.hpp  Comparator.hpp  DescriptorUsingDictionary.cpp  DescriptorUsingDictionary.hpp  DifferenceBySumComparator.hpp  HOGDescriptorExtractor.cpp  HOGDescriptorExtractor.hpp  HOGDictionary.cpp  HOGDictionary.hpp  HueDescriptor.cpp  HueDescriptor.hpp  IntersectionOfHistogramsComparator.hpp  LBPDescriptor.cpp  LBPDescriptor.h  OrthogonalLBPDescriptor.cpp  OrthogonalLBPDescriptor.hpp  PictureDatabase.cpp  PictureDatabase.h  PictureInformation.cpp  PictureInformation.h  QueryWorker.hpp  ResultVector.cpp  ResultVector.h  SIFTDescriptorExtractor.cpp  SIFTDescriptorExtractor.hpp  SIFTDictionary.cpp  SIFTDictionary.h  SIFTLBPDescriptorExtractor.cpp  SIFTLBPDescriptorExtractor.hpp  SIFTLBPSeparateComparator.cpp  SIFTLBPSeparateComparator.hpp  SIFT_LBP_HUEComparator.hpp  SIFT_LBP_HUEDescriptorExtractor.cpp  SIFT_LBP_HUEDescriptorExtractor.hpp  SIFTandLBPDictionary.cpp  SIFTandLBPDictionary.h  (+20 more)
src/Comparators/: Comparator.hpp  DifferenceBySumComparator.cpp  HOGLBPComparator.cpp  HOGLBPComparator.hpp  IntersectionOfHistogramsComparator.cpp  IntersectionOfHistogramsComparator.hpp  SIFTLBPSeparateComparator.cpp  SIFTLBPSeparateComparator.hpp  SIFT_LBP_HUEComparator.cpp  SIFT_LBP_HUEComparator.hpp  SIFT_OrthogonalLBPComparator.cpp  SIFT_OrthogonalLBPComparator.hpp  SIFT_OrthogonalLBP_HUEComparator.cpp  SIFT_OrthogonalLBP_HUEComparator.hpp
src/Descriptors/: BasicDescriptor.hpp  ColorOrthogonalLBPDescriptor.cpp  ColorOrthogonalLBPDescriptor.hpp  DescriptorUsingDictionary.cpp  DescriptorUsingDictionary.hpp  HOGDescriptorExtractor.cpp  HOGDescriptorExtractor.hpp  HOGLBPDescriptor.cpp  HOGLBPDescriptor.hpp  HueDescriptor.hpp  LBPDescriptor.cpp  LBPDescriptor.hpp  OrthogonalLBPDescriptor.cpp  (+12 more)
test/: BOWTest.cpp  DatabaseTest.cpp  VisualDictionaryTest.cpp  catch.hpp  main.cpp
(+26 files in other folders)
