cmake_minimum_required(VERSION 2.8)
project(BagOfWords)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( OpenCV REQUIRED )
find_package( Boost REQUIRED COMPONENTS system filesystem)
set(SOURCE_FILES main.cpp VisualDictionary.cpp VisualDictionary.h)
add_executable(BagOfWords ${SOURCE_FILES} VisualDictionary.cpp VisualDictionary.h)
target_link_libraries( BagOfWords ${OpenCV_LIBS} )
target_link_libraries( BagOfWords ${Boost_LIBRARIES} )